# ai-ops-auto

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 7c183c0ba12a_add_publish_jobs_superseded_by_job_id.py  7c7c50aecd6a_add_metrics_source.py  b09fbf0bf0f0_initial_schema_baseline.py  e4a7c1d9b2f3_add_jobhunt_tables.py  f1c3b8a7d2e4_add_job_accounts.py
docs/: ai-blog-and-drama-plan.md  anti-risk.md  architecture.md  content-hub.md  content-package-format.md  deployment.md  dev-db-migration.md  external-tools.md  funclip-setup.md  metrics-feedback-sop.md  publishing-sop.md
docs/topics/: dws-sop.md  篮球vlog-sop.md  软考-sop.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: use-topic-filter.ts
frontend/src/lib/: api.ts  mock-topics.ts  topic-utils.ts
frontend/src/pages/: accounts.tsx  articles.tsx  dashboard.tsx  jobs.tsx  topic-detail.tsx  topics.tsx
prompts/accounts/: _template.md
prompts/platform_style/: gongzhonghao-style.md  toutiao-style.md  xiaohongshu-style.md  zhihu-style.md
prompts/topics/: dws.md  篮球vlog.md  软考.md
scripts/: demo_topic_prompt.py  dev_servers.sh  e2e_quickstart.sh  init_db.py  install_external.sh  install_stealth.sh  migrate_add_topic_category.py  patch_for_camoufox.sh  seed_demo.sh  seed_topics.py  verify.sh
src/ai_ops/: cli.py  config.py
src/ai_ops/accounts/: dispatcher.py  health_monitor.py  manager.py  store.py
src/ai_ops/api/: auth.py  main.py
src/ai_ops/content/: asset_processor.py  collector.py  distributor.py  generator.py  heat_engine.py  humanize.py  manager.py  orchestrator.py
src/ai_ops/core/: db.py  dedup.py  enums.py  exceptions.py  models.py  parsers.py  schemas.py
src/ai_ops/jobhunt/: __init__.py  accounts.py  apply_service.py  browser.py  cli_commands.py  enums.py  greeting.py  matcher.py  models.py  pipeline.py  resume_parser.py  schemas.py  service.py
src/ai_ops/notify/: __init__.py  adapters.py  dedup.py  lark_cli.py  webhook.py
src/ai_ops/observability/: __init__.py  sentry.py  structured_logging.py
tests/: conftest.py  test_alembic_migration.py  test_asset_processor.py  test_auth.py  test_baijiahao_publisher.py  test_claude_cli_driver.py  test_clip_to_publish.py  test_collector.py  test_core_parsers.py  test_dedup.py  test_distributor.py  test_funclip_clipper.py  test_generator_dedup.py  test_happyhorse_engine.py  test_health_monitor.py  test_import_published.py  test_imports.py  test_initial_metrics.py  test_jobhunt_accounts.py  test_jobhunt_p0.py  test_jobhunt_p1.py  test_jobhunt_p2.py  test_kling_engine.py  test_logger_migration.py  test_metrics_health_eval_trigger.py  test_metrics_interval_index.py  test_metrics_source.py  test_notify.py  test_notify_lark_cli.py  test_observability.py  test_orchestrator.py  test_pre_publish_check.py  test_publishers.py  test_queue_cron.py  test_reports.py  test_republish.py  test_schedule_job_runs.py  test_scheduler_observability.py  test_schema_drift.py  test_script_to_drama.py  (+12 more)
(+60 files in other folders)
