[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops-auto"
version = "0.1.0"
description = "AI 运营自动化中台：内容生产 → 视频剪辑 → 多平台多账号分发"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "cryptography>=42",
    "python-multipart>=0.0.9",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.2",
    # 浏览器自动化（主流，微软官方维护，knwon star ~73k）
    # 默认走 playwright + 本地 Chrome channel，足以覆盖知乎/头条/公众号
    "playwright>=1.45",
    # Markdown → HTML，用于编辑器粘贴注入（Draft.js / ProseMirror）
    "markdown>=3.6",
    # 图片反指纹处理（asset_processor：EXIF/微裁剪/微旋转/调色）
    "Pillow>=10",
    # FastAPI Jinja2Templates 渲染 /ui/* 页面（api/main.py 直接 import）
    "jinja2>=3",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
celery = ["celery[redis]>=5.3"]
llm-openai = ["openai>=1.30"]
llm-anthropic = ["anthropic>=0.25"]
# 高风控平台（小红书）反检测加固档：drop-in 兼容 playwright API
stealth = ["patchright>=1.40"]
# 反检测顶配档：Firefox + C++ 层指纹欺骗，小红书首选
# 安装后需跑：python -m camoufox fetch
stealth-pro = ["camoufox[geoip]>=0.4"]
# 求职投递专题（jobhunt）：解析 PDF / Word 简历。txt/md 无需此档。
jobhunt = ["pypdf>=4", "python-docx>=1.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    # 文本查重；core/dedup.py 优先用，没装时回退到内置轻量实现
    "simhash>=2.1",
]

[project.scripts]
ai-ops = "ai_ops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
